--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
-<div class="container-fluid home">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <input id="name" placeholder="name" />
+    </div>
+  </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
       <div id="form-container">
@@ -12,7 +17,7 @@
           class="button-credit-card"
           onclick="onGetCardNonce(event)"
         >
-          Pay $1.00
+          Pay $15.00
         </button>
       </div>
     </div>
