add payment processing

--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -15,7 +15,7 @@
         <button
           id="sq-creditcard"
           class="button-credit-card"
-          onclick="onGetCardNonce(event)"
+          (click)="onGetCardNonce($event)"
         >
           Pay $15.00
         </button>
