--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <button>Purchase tickets</button>
+      <a href='/tickets'><button>Purchase tickets</button></a>
     </div>
   </div>
 </div>
