--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,8 +12,14 @@
       Arizona, as well as nationally touring comics.
     </div>
   </div>
+   <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      Our website is currently under construction, tickets can be purchased at the door.<br />
+      We apologize for any inconvenience. 
+    </div>
+  </div>
   <div class="row">
-    <div class="col-sm-12 text-center mt-5">Upcoming Shows</div>
+    <div class="col-sm-12 text-center mt-5">Upcoming Shows:</div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
@@ -22,7 +28,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <a href='/tickets'><button>Purchase tickets</button></a>
+      <!-- <a routerLink='/tickets' routerLinkActive="active"><button>Purchase tickets</button></a> -->
     </div>
   </div>
 </div>
