--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <div class="align-self-center"><a href="/about"></a></div>
     </div>
     <div class="col-sm-4 header-col d-flex justify-content-around">
-      <div class="align-self-center"><button>Buy Tickets</button></div>
+      <!-- <div class="align-self-center"><button>Buy Tickets</button></div> -->
     </div>
   </div>
 </div>
