--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,24 @@
 <app-header></app-header>
 <div class="container-fluid home">
   <div class="row">
-    <div class="col-sm-12 text-center mt-5">
+    <div class="col-sm-12 text-center">
+      <img src="/assets/images/house.JPG" alt="house" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 text-center mt-0 title">
       Welcome to the Prescott Comedy Club
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-12 text-center mt-5">
+    <div class="col-sm-12 text-center mt-5 main">
       We're proud to be everybody's hometown comedy club.<br />
       Showcasing performances from professional comedians around the state of
       Arizona, as well as nationally touring comics.
     </div>
   </div>
    <div class="row">
-    <div class="col-sm-12 text-center mt-5">
+    <div class="col-sm-12 text-center mt-5 main">
       Our website is currently under construction, tickets can be purchased at the door.<br />
       We apologize for any inconvenience. 
     </div>
@@ -23,7 +28,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img src="/assets/images/comedy-10-27.JPG" alt="image" />
+      <img src="/assets/images/comedy-10-27.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
