--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -12,6 +12,8 @@
   line-height: 1.2;
   letter-spacing: 0.091em;
   text-transform: uppercase;
+  text-decoration: none !important;
+  color: inherit !important;
 }
 
 .header-col {
