--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,21 @@
 <div class="container-fluid">
   <div class="row header">
     <div class="col-sm-4 header-col d-flex justify-content-around">
-      <div class="align-self-center masthead">Prescott Comedy Club</div>
+      <div class="align-self-center masthead">
+        <a routerLink="/" routerLinkActive="active" class="masthead"
+          >Prescott Comedy Club</a
+        >
+      </div>
     </div>
     <div class="col-sm-4 header-col d-flex justify-content-around">
       <div class="align-self-center"><a href="/about"></a></div>
     </div>
     <div class="col-sm-4 header-col d-flex justify-content-around">
-      <!-- <div class="align-self-center"><button>Buy Tickets</button></div> -->
+      <div class="align-self-center">
+        <a routerLink="/tickets" routerLinkActive="active"
+          ><button>Purchase Tickets</button></a
+        >
+      </div>
     </div>
   </div>
 </div>
