--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,7 +33,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <!-- <a routerLink='/tickets' routerLinkActive="active"><button>Purchase tickets</button></a> -->
+      <a routerLink='/tickets' routerLinkActive="active"><button>Purchase tickets</button></a>
     </div>
   </div>
 </div>
