style purchase button

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,14 +17,8 @@
       Arizona, as well as nationally touring comics.
     </div>
   </div>
-   <div class="row">
-    <div class="col-sm-12 text-center mt-5 main">
-      Our website is currently under construction, tickets can be purchased at the door.<br />
-      We apologize for any inconvenience. 
-    </div>
-  </div>
   <div class="row">
-    <div class="col-sm-12 text-center mt-5">Upcoming Shows:</div>
+    <div class="col-sm-12 text-center mt-5"><h1>Upcoming Shows:</h1></div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
@@ -33,7 +27,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <a routerLink='/tickets' routerLinkActive="active"><button>Purchase tickets</button></a>
+      <a routerLink='/tickets' routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
     </div>
   </div>
 </div>
