fix mobile layout

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,12 +10,12 @@
     <div class="col-sm-4 header-col d-flex justify-content-around">
       <div class="align-self-center"><a href="/about"></a></div>
     </div>
-    <div class="col-sm-4 header-col d-flex justify-content-around">
+    <!-- <div class="col-sm-4 header-col d-flex justify-content-around">
       <div class="align-self-center">
         <a routerLink="/tickets" routerLinkActive="active"
           ><button>Purchase Tickets</button></a
         >
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
