--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -19,7 +19,7 @@
 
         <input
           id="email"
-          class="third ml-3"
+          class="third ml-3 sq-input"
           placeholder="Email Address"
           (change)="setEmail($event)"
         />
