--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid home">
   <div class="row">
     <div class="col-sm-12 text-center">
-      <img src="/assets/images/house.JPG" alt="house" />
+      <img class="img-fluid" src="/assets/images/house.JPG" alt="house" />
     </div>
   </div>
   <div class="row">
@@ -22,7 +22,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img src="/assets/images/comedy-10-27.JPG" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/comedy-10-27.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
