--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,17 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img class="img-fluid" src="/assets/images/comedy-10-27.JPG" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/main.JPG" alt="flyer" />
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <a routerLink='/tickets' routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <img class="img-fluid" src="/assets/images/11-12-flyer.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
