--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
   </div>
    <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <a routerLink='/tickets' routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
+      <a [routerLink]="['/tickets', '11-13']" routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
     </div>
   </div>
    <div class="row">
@@ -37,7 +37,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <a routerLink='/tickets' routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
+      <a [routerLink]="['/tickets', '11-14']" routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
     </div>
   </div>
 </div>
