--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,14 +20,32 @@
   <div class="row">
     <div class="col-sm-12 text-center mt-5"><h1>Upcoming Shows:</h1></div>
   </div>
-   <div class="row">
+  <div class="row">
     <div class="col-sm-12 text-center mt-5">
       <img class="img-fluid" src="/assets/images/flyer-11-20.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <a [routerLink]="['/tickets', '11-20']" routerLinkActive="active"><button type="button" class="btn btn-primary btn-lg">Purchase tickets</button></a>
+      <a [routerLink]="['/tickets', '11-20']" routerLinkActive="active"
+        ><button type="button" class="btn btn-primary btn-lg">
+          Purchase tickets
+        </button></a
+      >
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <img class="img-fluid" src="/assets/images/flyer-11-27.JPG" alt="flyer" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <a [routerLink]="['/tickets', '11-27']" routerLinkActive="active"
+        ><button type="button" class="btn btn-primary btn-lg">
+          Purchase tickets
+        </button></a
+      >
     </div>
   </div>
 </div>
