--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,7 +25,7 @@
       <img class="img-fluid" src="/assets/images/flyer-11-20.JPG" alt="flyer" />
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-12 text-center mt-5">
       <a [routerLink]="['/tickets', '11-20']" routerLinkActive="active"
         ><button type="button" class="btn btn-primary btn-lg">
@@ -47,5 +47,5 @@
         </button></a
       >
     </div>
-  </div>
+  </div> -->
 </div>
