--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -54,21 +54,13 @@
       <div class="col-sm-12 text-center mt-5">
         <h4 class="header">
           Thank you for your support! Your tickets will be emailed to
-          {{ email }}, or you can print them below.
+          {{ email }}.
         </h4>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 text-center mt-2">
         <p>We look forward to seeing you at the show!</p>
-      </div>
-    </div>
-    <div
-      *ngFor="let item of [].constructor(ticketAmount); let i = index"
-      class="row"
-    >
-      <div class="col-sm-12 text-center mt-5">
-        <img class="img-fluid" src="/assets/images/ticket.JPG" alt="ticket" />
       </div>
     </div>
   </div>
