--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,12 +22,26 @@
   </div>
    <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img class="img-fluid" src="/assets/images/flyer-2-5.jpg" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/flyer-02-12.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5 mb-5">
-      <a [routerLink]="['/tickets', '2-5']" routerLinkActive="active"
+      <a [routerLink]="['/tickets', '2-12']" routerLinkActive="active"
+        ><button type="button" class="btn btn-primary btn-lg">
+          Purchase tickets
+        </button></a
+      >
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-sm-12 text-center mt-5">
+      <img class="img-fluid" src="/assets/images/flyer-02-13.JPG" alt="flyer" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-12 text-center mt-5 mb-5">
+      <a [routerLink]="['/tickets', '2-13']" routerLinkActive="active"
         ><button type="button" class="btn btn-primary btn-lg">
           Purchase tickets
         </button></a
