--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -9,14 +9,14 @@
     <div class="row">
       <div class="col-sm-12 text-center mt-5">
         <div id="form-container">
-          <mat-form-field appearance="fill" id="email" class="third ml-2">
+          <!-- <mat-form-field appearance="fill" id="email" class="third ml-2">
             <mat-label>Friday or Saturday?</mat-label>
             <mat-select (selectionChange)="setDate($event)">
               <mat-option *ngFor="let date of dates" [value]="date">
                 {{ date }}
               </mat-option>
             </mat-select>
-          </mat-form-field>
+          </mat-form-field> -->
           <mat-form-field appearance="fill" id="email" class="third ml-2">
             <mat-label>How many tickets?</mat-label>
             <mat-select (selectionChange)="setTicketAmount($event)">
