--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
       Arizona, as well as nationally touring comics.
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col-sm-12 text-center mt-5"><h1>Upcoming Shows:</h1></div>
   </div>
    <div class="row">
@@ -33,7 +33,7 @@
         </button></a
       >
     </div>
-  </div>
+  </div> -->
    <!-- <div class="row">
     <div class="col-sm-12 text-center mt-5">
       <img class="img-fluid" src="/assets/images/flyer-02-13.JPG" alt="flyer" />
