--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-12 text-center mt-5 main">
+    <div class="col-sm-12 text-center mt-5 mb-5 main">
       We're proud to be everybody's hometown comedy club.<br />
       Showcasing performances from professional comedians around the state of
       Arizona, as well as nationally touring comics.
