--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,23 +17,23 @@
       Arizona, as well as nationally touring comics.
     </div>
   </div>
-  <!-- <div class="row">
+  <div class="row">
     <div class="col-sm-12 text-center mt-5"><h1>Upcoming Shows:</h1></div>
   </div>
    <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img class="img-fluid" src="/assets/images/12-20.JPG" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/flyer-12-28.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5 mb-5">
-      <a [routerLink]="['/tickets', '2-20']" routerLinkActive="active"
+      <a [routerLink]="['/tickets', '2-28']" routerLinkActive="active"
         ><button type="button" class="btn btn-primary btn-lg">
           Purchase tickets
         </button></a
       >
     </div>
-  </div> -->
+  </div>
    <!-- <div class="row">
     <div class="col-sm-12 text-center mt-5">
       <img class="img-fluid" src="/assets/images/flyer-02-13.JPG" alt="flyer" />
