--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,7 +22,7 @@
   </div>
    <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img class="img-fluid" src="/assets/images/flyer-12-28.JPG" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/flyer-12-28.jpg" alt="flyer" />
     </div>
   </div>
   <div class="row">
