--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,12 +22,12 @@
   </div>
    <div class="row">
     <div class="col-sm-12 text-center mt-5">
-      <img class="img-fluid" src="/assets/images/flyer-12-28.jpg" alt="flyer" />
+      <img class="img-fluid" src="/assets/images/flyer-2-27.JPG" alt="flyer" />
     </div>
   </div>
   <div class="row">
     <div class="col-sm-12 text-center mt-5 mb-5">
-      <a [routerLink]="['/tickets', '2-28']" routerLinkActive="active"
+      <a [routerLink]="['/tickets', '2-27']" routerLinkActive="active"
         ><button type="button" class="btn btn-primary btn-lg">
           Purchase tickets
         </button></a
